--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages":[
     "pages/index/index",
+    "pages/me/me",
     "pages/logs/logs"
   ],
   "window":{
@@ -18,13 +19,13 @@
       "pagePath": "pages/index/index",
       "text": "限免"
     }, {
-      "pagePath": "pages/for-you/for-you",
+      "pagePath": "pages/index/index",
       "text": "收听"
     },{
-      "pagePath": "pages/explore/explore",
+      "pagePath": "pages/index/index",
       "text": "找人"
     },{
-      "pagePath": "pages/broadcast/broadcast",
+      "pagePath": "pages/me/me",
       "text": "我的"
     }]
   }
